# MoveNet-Judo-Model-Training

training-app/: README.md  pyproject.toml
training-app/src/training_app/helpers/: data_collection.ipynb  labeler.ipynb  multipose-detection.ipynb
training-app/src/training_app/helpers/archive/: labeler.ipynb
training-app/src/training_app/helpers/test/: multipose_test.ipynb
training-app/vids/: vid2.mov
training-app/vids/da_ashi_harai/: de_ashi_harai_2.mov  de_ashi_harai_4.mov  de_ashi_harai_7.mov
