[tool.poetry]
name = "training-app"
version = "0.1.0"
description = ""
authors = ["will-s-stone <will@williamstone.me>"]
readme = "README.md"
packages = [{include = "training_app", from = "src"}]

[tool.poetry.dependencies]
python = "3.9.19"
tensorflow = "^2.17.0"
numpy = "1.26"
tensorflow-hub = "^0.16.1"
opencv-python = "^4.10.0.84"
jupyter = "^1.0.0"
matplotlib = "^3.9.1.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
